componenente per il resize della view

--- a/ClientWebApp/wwwroot/index.html
+++ b/ClientWebApp/wwwroot/index.html
@@ -13,6 +13,7 @@
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity=”sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj” crossorigin=”anonymous”></script>
     <!-- Radzen -->
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
