aggiunto ordinamento alle categorie lato client

--- a/ClientWebApp/wwwroot/index.html
+++ b/ClientWebApp/wwwroot/index.html
@@ -17,6 +17,8 @@
     <!-- Radzen -->
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
+    <!-- Libreria js sortable-->
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
 </head>
 
 <body>
