--- a/ClientWebApp/wwwroot/index.html
+++ b/ClientWebApp/wwwroot/index.html
@@ -6,20 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ClientWebApp</title>
     <base href="/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="_content/ConstructionSiteLibrary/css/bootstrap/bootstrap.min.css" />
     <!-- Override dei colori personalizzati -->
     <link rel="stylesheet" href="_content/ConstructionSiteLibrary/css/rootDefault.css" />
-    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="_content/ConstructionSiteLibrary/css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="ClientWebApp.styles.css" rel="stylesheet" />
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity=”sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj” crossorigin=”anonymous”></script>
-    <!-- Radzen -->
-    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
-    <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
     <!-- Libreria js sortable-->
     <!--<script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>-->
     <script src="sortableJS/Sortable.min.js"></script>
@@ -29,7 +25,10 @@
     <script src="jsPDF/purify.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
     <!-- Material icon-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- Radzen -->
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
 
 
 
