--- a/ClientWebApp/wwwroot/index.html
+++ b/ClientWebApp/wwwroot/index.html
@@ -7,10 +7,10 @@
     <title>ClientWebApp</title>
     <base href="/" />
     <!-- Override dei colori personalizzati -->
-    <link rel="stylesheet" href="_content/ConstructionSiteLibrary/css/rootDefault.css" />
-    <link rel="stylesheet" href="_content/ConstructionSiteLibrary/css/app.css?version=0.1" />
+    <link rel="stylesheet" href="_content/ConstructionSiteLibrary/css/rootDefault.css?version=0.2" />
+    <link rel="stylesheet" href="_content/ConstructionSiteLibrary/css/app.css?version=0.2" />
+    <link rel="stylesheet" href="ClientWebApp.styles.css?version=0.2" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="ClientWebApp.styles.css?version=0.1" rel="stylesheet" />
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
@@ -28,7 +28,9 @@
     <!-- Radzen -->
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
+    <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 
 <body>
