--- a/ClientWebApp/wwwroot/index.html
+++ b/ClientWebApp/wwwroot/index.html
@@ -17,7 +17,7 @@
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
-    <!--<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity=”sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj” crossorigin=”anonymous”></script>-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity=”sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj” crossorigin=”anonymous”></script>
     <!-- Libreria js sortable-->
     <!--<script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>-->
     <script src="sortableJS/Sortable.min.js"></script>
